--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header none">
       <img class="header__logo" src="./images/logo.svg" alt="Лого" />
     </header>
     <main class="content">
-      <section class="profile">
+      <section class="profile none">
         <img src="./images/avatar.jpg" alt="Аватар" class="profile__image" />
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -21,8 +21,78 @@
         </div>
         <button class="profile__button"></button>
       </section>
+      <section class="elements">
+        <ul class="elements__list">
+          <li class="elements__item">
+            <img
+              src="./images/karachaevsk.jpg"
+              alt="Карачаевск"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Карачаевск</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img
+              src="./images/elbrus.jpg"
+              alt="Гора Эльбрус"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Гора Эльбрус</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img
+              src="./images/dombay.jpg"
+              alt="Домбай"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Домбай</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img
+              src="./images/elbrus.jpg"
+              alt="Гора Эльбрус"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Гора Эльбрус</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img
+              src="./images/dombay.jpg"
+              alt="Домбай"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Домбай</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img
+              src="./images/karachaevsk.jpg"
+              alt="Каарачаево-Черкесск"
+              class="elements__item-image"
+            />
+            <div class="elements__item-container">
+              <h2 class="elements__item-title">Каарачаево-Черкесск</h2>
+              <button class="elements__item-button"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer class="footer">
+    <footer class="footer none">
       <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
   </body>
