--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
-    <header class="header none">
+    <header class="header">
       <img class="header__logo" src="./images/logo.svg" alt="Лого" />
     </header>
     <main class="content">
@@ -21,7 +21,7 @@
         </div>
         <button class="profile__button"></button>
       </section>
-      <section class="elements">
+      <section class="elements none">
         <ul class="elements__list">
           <li class="elements__item">
             <img
