--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <button class="profile__button"></button>
       </section>
-      <section class="elements none">
+      <section class="elements">
         <ul class="elements__list">
           <li class="elements__item">
             <img
