feat: feature/footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer none">
+    <footer class="footer">
       <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
   </body>
