--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       <img class="header__logo" src="./images/logo.svg" alt="Лого" />
     </header>
     <main class="content">
-      <section class="profile none">
-        <img src="./images/avatar.jpg" alt="Аватар" class="profile__image" />
-        <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__text">Исследователь океана</p>
-          <button class="profile__edit"></button>
+      <section class="profile">
+        <div class="profile__main">
+          <img src="./images/avatar.jpg" alt="Аватар" class="profile__image" />
+          <div class="profile__info">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__button"></button>
+            <p class="profile__text">Исследователь океана</p>
+          </div>
         </div>
-        <button class="profile__button"></button>
+        <button class="profile__button-add"></button>
       </section>
       <section class="elements">
         <ul class="elements__list">
