--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <img src="./images/avatar.jpg" alt="Аватар" class="profile__image" />
           <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__button"></button>
+            <button class="profile__button" type="button"></button>
             <p class="profile__text">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__button-add"></button>
+        <button class="profile__button-add" type="button"></button>
       </section>
       <section class="elements">
         <ul class="elements__list">
@@ -33,7 +33,7 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Карачаевск</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
@@ -44,7 +44,7 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Гора Эльбрус</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
@@ -55,7 +55,7 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Домбай</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
@@ -66,7 +66,7 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Гора Эльбрус</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
@@ -77,7 +77,7 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Домбай</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
@@ -88,14 +88,14 @@
             />
             <div class="elements__item-container">
               <h2 class="elements__item-title">Каарачаево-Черкесск</h2>
-              <button class="elements__item-button"></button>
+              <button class="elements__item-button" type="button"></button>
             </div>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <section class="popup">
       <div class="popup__container">
@@ -104,33 +104,34 @@
           type="button"
           title="Закрыть"
         ></button>
-        <form class="popup__form" name="formProfile" action="#"></form>
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <label class="popup__label">
-          <input
-            class="popup__input popup__input_type_name"
-            id="name"
-            placeholder="Жак-Ив Кусто"
-            name="title"
-            minlenght="5"
-            maxlength="40"
-            required
-          />
-        </label>
-        <label class="popup__label">
-          <input
-            class="popup__input popup__input_type_text"
-            id="text"
-            placeholder="Исследователь океана"
-            name="text"
-            minlenght="5"
-            maxlength="40"
-            required
-          />
-        </label>
-        <button class="popup__button-submit" type="submit" title="Сохранить">
-          Сохранить
-        </button>
+        <form class="popup__form" name="formProfile" action="#">
+          <h3 class="popup__title">Редактировать профиль</h3>
+          <label class="popup__label">
+            <input
+              class="popup__input popup__input_type_name"
+              id="name"
+              placeholder="Жак-Ив Кусто"
+              name="title"
+              minlenght="2"
+              maxlength="40"
+              required
+            />
+          </label>
+          <label class="popup__label">
+            <input
+              class="popup__input"
+              id="text"
+              placeholder="Исследователь океана"
+              name="text"
+              minlenght="5"
+              maxlength="40"
+              required
+            />
+          </label>
+          <button class="popup__button-submit" type="submit" title="Сохранить">
+            Сохранить
+          </button>
+        </form>
       </div>
     </section>
     <script src="./scripts/index.js"></script>
