--- a/index.html
+++ b/index.html
@@ -24,79 +24,27 @@
         <button class="profile__button-add" type="button"></button>
       </section>
       <section class="elements">
-        <ul class="elements__list">
-          <li class="elements__item">
-            <img
-              src="./images/karachaevsk.jpg"
-              alt="Карачаевск"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Карачаевск</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/elbrus.jpg"
-              alt="Гора Эльбрус"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Гора Эльбрус</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/dombay.jpg"
-              alt="Домбай"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Домбай</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/elbrus.jpg"
-              alt="Гора Эльбрус"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Гора Эльбрус</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/dombay.jpg"
-              alt="Домбай"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Домбай</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/karachaevsk.jpg"
-              alt="Каарачаево-Черкесск"
-              class="elements__item-image"
-            />
-            <div class="elements__item-container">
-              <h2 class="elements__item-title">Каарачаево-Черкесск</h2>
-              <button class="elements__item-button" type="button"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="elements__list"></ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
+    <template class="item__template">
+      <li class="elements__item">
+        <button
+          class="elements__trash-button"
+          type="button"
+          id="delete"
+          title="delete"
+        ></button>
+        <img class="elements__item-image" />
+        <div class="elements__item-container">
+          <h2 class="elements__item-title"></h2>
+          <button class="elements__item-like" type="button"></button>
+        </div>
+      </li>
+    </template>
     <section class="popup popup_type_profile">
       <div class="popup__container">
         <button
@@ -139,13 +87,13 @@
           type="button"
           title="Закрыть"
         ></button>
-        <form class="popup__form" name="cardProfile" action="#">
+        <form class="popup__form popup__form-card" name="card" action="#">
           <h3 class="popup__title">Новое место</h3>
           <label class="popup__label">
             <input
-              class="popup__input popup__input_type_name"
-              id="name"
-              name="title"
+              class="popup__input popup__iunput_type_card"
+              id="cardName"
+              name="cardInput"
               minlenght="2"
               maxlength="60"
               required
@@ -153,20 +101,38 @@
           </label>
           <label class="popup__label">
             <input
-              class="popup__input"
-              id="text"
-              name="text"
-              minlenght="5"
-              maxlength="100"
+              class="popup__input popup__iunput_type_card"
+              id="cardSrc"
+              name="cardInputSrc"
+              minlenght="2"
               required
             />
           </label>
-          <button class="popup__button-submit" type="submit" title="Сохранить">
-            Сохранить
+          <button
+            class="popup__button-submit popup__button-submit_type_card"
+            type="submit"
+            id="cardBtn"
+            value="Создать"
+          >
+            Создать
           </button>
         </form>
       </div>
     </section>
+    <section class="popup popup_type_image">
+      <div class="popup__container-image">
+        <button
+          class="popup__button-close"
+          type="button"
+          title="Закрыть"
+        ></button>
+        <figure class="popup__figure">
+          <img class="popup__image" src="" alt="" />
+          <figcaption class="popup__figure-cuption"></figcaption>
+        </figure>
+      </div>
+    </section>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
