--- a/index.html
+++ b/index.html
@@ -131,8 +131,12 @@
           title="Закрыть"
         ></button>
         <figure class="popup__figure">
-          <img class="popup__zoom-image" src="" alt="" />
-          <figcaption class="popup__figure-caption"></figcaption>
+          <img
+            class="popup__zoom-image"
+            src="./images/dombay.jpg"
+            alt="Домбай"
+          />
+          <figcaption class="popup__figure-caption">Домбай</figcaption>
         </figure>
       </div>
     </section>
