--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </form>
       </div>
     </section>
-    <section class="popup popup_type_card">
+    <section class="popup popup_type-card">
       <div class="popup__container">
         <button
           class="popup__button-close"
@@ -95,7 +95,7 @@
           <h3 class="popup__title">Новое место</h3>
           <label class="popup__label">
             <input
-              class="popup__input popup__iunput_type_card"
+              class="popup__input popup__iunput_type-card"
               id="cardName"
               name="cardInput"
               minlenght="2"
@@ -105,7 +105,7 @@
           </label>
           <label class="popup__label">
             <input
-              class="popup__input popup__iunput_type_card"
+              class="popup__input popup__iunput_type-card"
               id="cardSrc"
               name="cardInputSrc"
               minlenght="2"
@@ -113,7 +113,7 @@
             />
           </label>
           <button
-            class="popup__button-submit popup__button-submit_type_card"
+            class="popup__button-submit popup__button-submit_type-card"
             type="submit"
             id="cardBtn"
             value="Создать"
