--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <h3 class="popup__title">Новое место</h3>
           <label class="popup__label">
             <input
-              class="popup__input popup__iunput_type-card"
+              class="popup__input"
               id="cardName"
               name="cardInput"
               minlenght="2"
@@ -105,7 +105,7 @@
           </label>
           <label class="popup__label">
             <input
-              class="popup__input popup__iunput_type-card"
+              class="popup__input"
               id="cardSrc"
               name="cardInputSrc"
               minlenght="2"
